interna politicas Ok con responsive

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3580,6 +3580,13 @@ button[type=submit]{
     }
 }
 
+.s_politicas{
+    padding: 50px 0 80px;
+    box-sizing: border-box;
+    .tit_section{
+        margin: 0 0 40px;
+    }
+}
 
 /* ************
 RESPONSIVE DESIGN
