--- a/css/style.css
+++ b/css/style.css
@@ -3647,6 +3647,14 @@ button[type=submit] {
   padding: 4px 24px;
 }
 
+.s_politicas {
+  padding: 50px 0 80px;
+  box-sizing: border-box;
+}
+.s_politicas .tit_section {
+  margin: 0 0 40px;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
