--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,25 @@ select {
   cursor: pointer;
 }
 
+textarea {
+  width: 98%;
+  max-height: 100px;
+  border-radius: 20px;
+  border: 1px solid #CCCCCC;
+  padding: 10px;
+  box-sizing: border-box;
+  outline: 0;
+}
+textarea::-moz-placeholder {
+  font-size: 14px;
+}
+textarea:-ms-input-placeholder {
+  font-size: 14px;
+}
+textarea::placeholder {
+  font-size: 14px;
+}
+
 /* *********** */
 header {
   position: fixed;
@@ -1565,6 +1584,9 @@ footer .subfooter {
 .cont_input input::placeholder, .cont_submit input::placeholder {
   color: #9e9e9e;
 }
+.cont_input.textarea, .cont_submit.textarea {
+  height: initial;
+}
 .cont_input.chk_politicas, .cont_submit.chk_politicas {
   display: flex;
   justify-content: center;
@@ -1915,15 +1937,16 @@ button[type=submit] {
   left: -60px;
 }
 
-.s_nuestro_equipo {
-  padding: 60px 0 0;
-}
-.s_nuestro_equipo .desc_section {
+.desc_section {
   display: block;
   width: 100%;
   max-width: 740px;
-  margin: 30px auto;
+  margin: 30px auto 50px;
   text-align: center;
+}
+
+.s_nuestro_equipo {
+  padding: 60px 0 0;
 }
 .s_nuestro_equipo .c_icon_equipos {
   display: flex;
@@ -3512,6 +3535,22 @@ button[type=submit] {
   box-sizing: border-box;
 }
 
+.form_tn {
+  background-color: var(--bg_cta_light);
+  padding: 30px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  max-width: 455px;
+}
+.form_tn .cont_input {
+  margin: 0 0 10px;
+}
+.form_tn .cont_input select {
+  border-radius: 100px;
+  font-size: 14px;
+  color: #94999B;
+}
+
 .c_form_trabaja {
   display: flex;
   align-content: center;
@@ -3519,20 +3558,6 @@ button[type=submit] {
   max-width: 930px;
   margin: auto;
   gap: 30px;
-}
-.c_form_trabaja .form_tn {
-  background-color: var(--bg_cta_light);
-  padding: 30px;
-  box-sizing: border-box;
-  border-radius: 8px;
-}
-.c_form_trabaja .form_tn .cont_input {
-  margin: 0 0 10px;
-}
-.c_form_trabaja .form_tn .cont_input select {
-  border-radius: 100px;
-  font-size: 14px;
-  color: #94999B;
 }
 .c_form_trabaja .c_tit_section {
   width: 100%;
@@ -3653,6 +3678,34 @@ button[type=submit] {
 }
 .s_politicas .tit_section {
   margin: 0 0 40px;
+}
+
+/* ESTILOS INTERNA PQRS */
+.cont_azul_pqr {
+  background: var(--color_pri);
+  padding: 70px 0;
+  box-sizing: border-box;
+  position: relative;
+}
+.cont_azul_pqr::before {
+  mix-blend-mode: luminosity;
+  content: "";
+  position: absolute;
+  background: url("../images/diseno/16-pqr/img_fondo_azul.png") no-repeat center left;
+  width: 50%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 100%;
+}
+
+.cont_azul_pqr .center {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.cont_azul_pqr .center form {
+  grid-column: 2/3;
 }
 
 /* ************
