--- a/sass/style.scss
+++ b/sass/style.scss
@@ -353,6 +353,19 @@ select{
     cursor: pointer;
 }
 
+textarea{
+    width: 98%;
+    max-height: 100px;
+    border-radius: 20px;
+    border: 1px solid #CCCCCC;
+    padding: 10px;
+    box-sizing: border-box;
+    outline: 0;
+    &::placeholder{
+        font-size: 14px;
+    }
+}
+
 /* *********** */
 
 header{
@@ -1521,6 +1534,9 @@ footer{
             color: #9e9e9e;
         }
     }
+    &.textarea{
+        height: initial;
+    }
     &.chk_politicas{
         display: flex;
         justify-content: center;
@@ -1870,16 +1886,16 @@ button[type=submit]{
         left: -60px;
     }
 }
-
+.desc_section{
+    display: block;
+    width: 100%;
+    max-width: 740px;
+    margin: 30px auto 50px;
+    text-align: center;    
+}
 .s_nuestro_equipo{
     padding: 60px 0 0;
-    .desc_section{
-        display: block;
-        width: 100%;
-        max-width: 740px;
-        margin: 30px auto;
-        text-align: center;    
-    }
+    
     .c_icon_equipos{
         display: flex;
         align-items: center;
@@ -3444,6 +3460,21 @@ button[type=submit]{
     box-sizing: border-box;
 }
 
+.form_tn{
+    background-color: var(--bg_cta_light);
+    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    max-width: 455px;
+    .cont_input{
+        margin: 0 0 10px;
+        select{
+            border-radius: 100px;
+            font-size: 14px;
+            color: #94999B;
+        }
+    }
+}
 .c_form_trabaja{
     display: flex;
     align-content: center;
@@ -3451,20 +3482,6 @@ button[type=submit]{
     max-width: 930px;
     margin: auto;
     gap:30px;
-    .form_tn{
-        background-color: var(--bg_cta_light);
-        padding: 30px;
-        box-sizing: border-box;
-        border-radius: 8px;
-        .cont_input{
-            margin: 0 0 10px;
-            select{
-                border-radius: 100px;
-                font-size: 14px;
-                color: #94999B;
-            }
-        }
-    }
     .c_tit_section{
         width: 100%;
         max-width: 360px;
@@ -3587,6 +3604,38 @@ button[type=submit]{
         margin: 0 0 40px;
     }
 }
+
+/* ESTILOS INTERNA PQRS */
+.cont_azul_pqr{
+    background: var(--color_pri);
+    padding: 70px 0;
+    box-sizing: border-box;
+    position: relative;
+    &::before{
+        mix-blend-mode: luminosity;
+        content: '';
+        position: absolute;
+        background: url('../images/diseno/16-pqr/img_fondo_azul.png') no-repeat center left;
+        width: 50%;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        height: 100%;
+    }
+}
+
+.cont_azul_pqr .center{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+    form{
+        grid-column: 2 / 3;
+    } 
+}
+
+
+
 
 /* ************
 RESPONSIVE DESIGN
