--- a/sass/style.scss
+++ b/sass/style.scss
@@ -349,15 +349,17 @@ select{
     box-sizing: border-box;
     background-color: #FFF;
     border: 1px solid #CCCCCC;
-    border-radius: 4px;
+    border-radius: 200px;
+    font-size: 14px;
+    color: #727272;
     cursor: pointer;
 }
 
 textarea{
-    width: 98%;
+    width: 100%;
     max-height: 100px;
     border-radius: 20px;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #d2d2d2;
     padding: 10px;
     box-sizing: border-box;
     outline: 0;
@@ -3472,6 +3474,7 @@ button[type=submit]{
             border-radius: 100px;
             font-size: 14px;
             color: #94999B;
+            width: 100%;
         }
     }
 }
@@ -3517,6 +3520,7 @@ button[type=submit]{
         border: 1px solid #CCCCCC;
         padding: 0;
         height: fit-content;
+        width: 100%;
         &::-webkit-file-upload-button{
             background-color: var(--color_pri);
             border-radius: 100px;
@@ -3616,7 +3620,8 @@ button[type=submit]{
         content: '';
         position: absolute;
         background: url('../images/diseno/16-pqr/img_fondo_azul.png') no-repeat center left;
-        width: 50%;
+        background-size: contain;
+        width: 100%;
         left: 0;
         top: 0;
         bottom: 0;
@@ -3628,6 +3633,8 @@ button[type=submit]{
 .cont_azul_pqr .center{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    position: relative;
+    z-index: 1;
     
     form{
         grid-column: 2 / 3;
@@ -4182,6 +4189,13 @@ RESPONSIVE DESIGN
     .c_mision_vision ul li a{
         max-width: 200px;
     }
+    .cont_azul_pqr .center{
+        grid-template-columns: 1fr;
+    }
+    .cont_azul_pqr .center form {
+        grid-column: initial;
+        justify-self: center;
+    }
 }
 @media screen and (max-width:480px){
     header .header_nav{
@@ -4392,5 +4406,11 @@ RESPONSIVE DESIGN
     }
     .c_nuestra_gente .cont_vid_img{
         grid-template-columns: 1fr;
+    }
+    .form_tn{
+        padding: 14px;
+    }
+    .trabaje_chk label{
+        font-size: 13px;
     }
 }
