--- a/css/style.css
+++ b/css/style.css
@@ -3715,6 +3715,94 @@ button[type=submit] {
   grid-column: 2/3;
 }
 
+/* ESTILOS INTERNA CONTACTO */
+.btns_contacto {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 30PX;
+}
+.btns_contacto a {
+  min-width: 190px;
+  text-align: center;
+  padding: 8px 20px;
+  gap: 10px;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+
+.s_contact_form {
+  background: url("../images/diseno/17-contacto/img1.jpg") no-repeat center left;
+  background-size: cover;
+  padding: 60px 0;
+  box-sizing: border-box;
+  margin: 50px 0 0;
+}
+
+.c_contact_form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+.c_contact_form .form_tn {
+  grid-column: 2/3;
+  background: #FFFFFF;
+  opacity: 0.95;
+  box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+
+.s_contact_map {
+  overflow: hidden;
+}
+
+.c_contact_map {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+.c_contact_map .info_datos_c {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-self: flex-start;
+  gap: 20px;
+}
+.c_contact_map .info_datos_c i {
+  font-size: 50px;
+  font-weight: 600;
+  color: var(--color_pri);
+}
+.c_contact_map .info_datos_c h3 {
+  margin: 0;
+  font-size: 30px;
+  color: var(--txt_cta_lightblue);
+  text-transform: uppercase;
+}
+.c_contact_map .info_datos_c .direccion_c {
+  line-height: 1.4;
+}
+
+.mapa {
+  width: 100%;
+  position: relative;
+  min-height: 500px;
+}
+.mapa iframe {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 50vw;
+  height: 100%;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -4395,6 +4483,36 @@ RESPONSIVE DESIGN
     grid-column: initial;
     justify-self: center;
   }
+
+  .c_contact_form {
+    grid-template-columns: 1fr;
+  }
+
+  .c_contact_form .form_tn {
+    grid-column: initial;
+    justify-self: center;
+  }
+
+  .c_contact_map {
+    grid-template-columns: 1fr;
+    padding: 40px 0;
+    box-sizing: border-box;
+  }
+
+  .mapa {
+    margin: 40px 0;
+  }
+  .mapa iframe {
+    width: 100%;
+  }
+
+  .btns_contacto a {
+    min-width: 150px;
+  }
+
+  .btns_contacto {
+    gap: 10px;
+  }
 }
 @media screen and (max-width: 480px) {
   header .header_nav {
@@ -4633,6 +4751,11 @@ RESPONSIVE DESIGN
   .c_mision_vision .desc_mision_vision {
     padding: 50px 40px;
   }
+
+  .btns_contacto a {
+    min-width: initial;
+    font-size: 14px;
+  }
 }
 @media screen and (max-width: 390px) {
   .c_perfil_pro picture {
@@ -4662,5 +4785,12 @@ RESPONSIVE DESIGN
 
   .trabaje_chk label {
     font-size: 13px;
+  }
+
+  .btns_contacto {
+    flex-direction: column;
+  }
+  .btns_contacto a {
+    min-width: 200px;
   }
 }/*# sourceMappingURL=style.css.map */
