--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3732,6 +3732,33 @@ border-radius: 8px;
     }
 }
 
+/* ESTILOS INTERNA RESERVA */
+
+.s_reserva{
+    background-color: #F4F4F4;
+    padding: 0 0 80px;
+    box-sizing: border-box;
+}
+
+.s_form_reserva{
+    background: linear-gradient(180deg, #F4F4F4 2.02%, rgba(244, 244, 244, 0) 12.11%), url('../images/diseno/18-reservas/img.jpg')no-repeat top left;
+    background-size: cover;
+    padding: 0 0 40px;
+    box-sizing: border-box;
+}
+.c_form_reserva{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    min-height: 770px;
+    form{
+        grid-column: 2 / 3;
+        justify-self: center;
+        background: #FFFFFF;
+        box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;
+    }
+}
 
 
 
@@ -3914,6 +3941,18 @@ RESPONSIVE DESIGN
     }
     .c_it_ofertaespecial{
         padding: 30px 40px;
+    }
+    .c_form_reserva{
+        grid-template-columns: 1fr;
+        align-items: flex-end;
+        min-height: 1080px;
+    }
+    .c_form_reserva form{
+        grid-column: initial;
+    }
+    .s_form_reserva{
+        background: linear-gradient(180deg, #F4F4F4 2.02%, rgba(244, 244, 244, 0) 12.11%), url(../images/diseno/18-reservas/img2.jpg) no-repeat top center;
+        background-size: cover;
     }
 }
 @media screen and (max-width:768px){
