--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3760,6 +3760,130 @@ border-radius: 8px;
     }
 }
 
+/* ESTILOS INTERNA DEFECTOS VISUALES */
+
+.s_header_dv, .s_defectos_visuales, .s_defectos_visuales + .s_nuestros_valores{
+    background-color: #F4F4F4;
+}
+.s_defectos_visuales{
+    padding: 0 0 80px;
+}
+.s_header_dv{
+    padding: 0 0 40px;
+}
+.s_defectos_visuales + .s_nuestros_valores{
+    padding: 0 0 80px;
+}
+.c_defectos_visuales{
+    display: flex;
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+    .btn_menu_dv{
+        display: none;
+    }
+    .menu_dv{
+        position: relative;
+        .items_btn_dv{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 4px;
+            padding: 20px 0;
+            box-sizing: border-box;
+            transition: 300ms ease;
+            a{
+                min-width: 260px;
+                width: 100%;
+                padding: 10px 20px;
+                box-sizing: border-box;
+                background: #EBEBEB;
+                border-radius: 6px 0px 0px 6px;
+                color: #94999B;
+                font-weight: 600;
+                font-size: 18px;
+                &.active{
+                    color: var(--txt_cta_lightblue);
+                    background-color: var(--bg_cta_light);
+                }
+            }
+            &.active{
+                transform: translateX(-7%);
+            }
+        }
+
+    }
+}
+.content_aside_dv{
+    background-color: var(--bg_general);
+    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 12px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    h4{
+        margin: 0 0 20px;
+        color: var(--txt_cta_lightblue);
+        text-transform: uppercase;
+    }
+    picture{
+        display: inline-block;
+        width: 100%;
+        border-radius: 8px;
+        overflow: hidden;
+        min-height: 320px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 3px;
+            background-color: #FFF;
+            height: 100%;
+            inset: 0;
+        }
+        img{
+            position: absolute;
+            inset: 0;
+            margin: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 1;
+            &:nth-child(2){
+                mask-image: url(../images/diseno/20-defectos-visuales/mascara.svg);
+                mask-repeat: no-repeat;
+                mask-size: cover;
+                mask-position: calc(50% - -290px);
+                filter:brightness(.8);
+                mask-border-width: 5px;
+            }
+        }
+        .desc_dv{
+            position: absolute;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            padding: 10px 20px;
+            bottom: 0;
+            box-sizing: border-box;
+            z-index: 2;
+            span{
+                display: inline-block;
+                color: var(--txt_cta_light);
+                font-weight: 700;
+                font-size: 18px;
+            }
+        }
+    }
+}
+.dsc{
+    margin: 0 0 20px;
+}
+
+
+
 
 
 
@@ -3953,6 +4077,12 @@ RESPONSIVE DESIGN
     .s_form_reserva{
         background: linear-gradient(180deg, #F4F4F4 2.02%, rgba(244, 244, 244, 0) 12.11%), url(../images/diseno/18-reservas/img2.jpg) no-repeat top center;
         background-size: cover;
+    }
+    .c_defectos_visuales{
+        grid-template-columns: 1fr;
+    }
+    .content_aside_dv picture img:nth-child(2){
+        mask-position: calc(50% + 200px);
     }
 }
 @media screen and (max-width:768px){
@@ -4352,6 +4482,37 @@ RESPONSIVE DESIGN
     .btns_contacto{
         gap: 10px;
     }
+    .c_defectos_visuales .btn_menu_dv{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+        width: 30px;
+        height: 30px;
+        background-color: #FFF;
+        color: var(--txt_cta_lightblue);
+        font-size: 20px;
+    }
+    .items_btn_dv{
+        position: absolute;
+        transform: translateX(-110%);
+        z-index: 3;
+        background-color: #7b7b7b;
+        padding: 20px!important;
+        box-sizing: border-box;
+        border-radius: 0 8px 8px 0;
+        top: 40px;
+    }
+    .c_defectos_visuales{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .c_defectos_visuales .menu_dv .items_btn_dv a{
+        border-radius: 8px;
+    }
+    .desc_section{
+        margin: 30px auto 0px; 
+    }
 }
 @media screen and (max-width:480px){
     header .header_nav{
@@ -4548,6 +4709,18 @@ RESPONSIVE DESIGN
         min-width: initial;
         font-size: 14px;
     }
+    .content_aside_dv picture{
+        min-height: 220px;
+    }
+    .content_aside_dv picture img:nth-child(2){
+        mask-position: calc(50% + 130px);
+    }
+    .desc_section{
+        margin: 30px auto 0;
+    }
+    .content_aside_dv{
+        padding: 20px;
+    }
 }
 @media screen and (max-width:390px){
     .c_perfil_pro picture {
@@ -4578,5 +4751,11 @@ RESPONSIVE DESIGN
         a{
             min-width: 200px;
         }
+    }
+    .content_aside_dv picture {
+        min-height: 170px;
+    }
+    .content_aside_dv picture .desc_dv span{
+        font-size: 16px;
     }
 }
