--- a/css/style.css
+++ b/css/style.css
@@ -3967,6 +3967,10 @@ button[type=submit] {
   margin: 0 0 20px;
 }
 
+.c_defectos_visuales + .cont_btn {
+  padding: 40px 0 0;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
