avance interna examenes diagnosticos

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3892,8 +3892,58 @@ border-radius: 8px;
     padding: 40px 0 0;
 }
 
+/* ESTILOS INTERNA EXAMENES OSDI */
 
+.data_center{
+    text-align: center!important;
+    font-size: 14px;
+}
+.data_left{
+    text-align: left!important;
+    font-size: 14px;
+    height: 26px;
+}
 
+#tableTest{
+    thead{
+        background-color: var(--color_pri);
+        border-radius: 8px 8px 0 0;
+    }
+    input[type=radio]{
+        width: 18px;
+        height: 18px;
+        cursor: pointer;
+        appearance: none;
+        border: 1px solid gray;
+        border-radius: 100px;
+        position: relative;
+        &:checked{
+            border: 1px solid var(--txt_cta_lightblue);
+            &::before{
+                content: '';
+                width: 10px;
+                height: 10px;
+                background-color: var(--txt_cta_lightblue);
+                position: absolute;
+                inset: 0;
+                margin: auto;
+                border-radius: 100px;
+            }
+        }
+    }
+    thead th{
+        padding: 20px 10px;
+    }
+    .tit_table{
+        color: var(--txt_cta_light);
+    }
+    .w40{
+        width: 40%;
+    }
+    tbody tr:nth-child(2n+2){
+        background-color: #F1FBFF;
+    }
+}
 
 /* ************
 RESPONSIVE DESIGN
@@ -4090,6 +4140,9 @@ RESPONSIVE DESIGN
     }
     .content_aside_dv picture img:nth-child(2){
         mask-position: calc(50% + 200px);
+    }
+    .cont_datatable{
+        overflow-x: scroll;
     }
 }
 @media screen and (max-width:768px){
