--- a/css/style.css
+++ b/css/style.css
@@ -3971,6 +3971,59 @@ button[type=submit] {
   padding: 40px 0 0;
 }
 
+/* ESTILOS INTERNA EXAMENES OSDI */
+.data_center {
+  text-align: center !important;
+  font-size: 14px;
+}
+
+.data_left {
+  text-align: left !important;
+  font-size: 14px;
+  height: 26px;
+}
+
+#tableTest thead {
+  background-color: var(--color_pri);
+  border-radius: 8px 8px 0 0;
+}
+#tableTest input[type=radio] {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 1px solid gray;
+  border-radius: 100px;
+  position: relative;
+}
+#tableTest input[type=radio]:checked {
+  border: 1px solid var(--txt_cta_lightblue);
+}
+#tableTest input[type=radio]:checked::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background-color: var(--txt_cta_lightblue);
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  border-radius: 100px;
+}
+#tableTest thead th {
+  padding: 20px 10px;
+}
+#tableTest .tit_table {
+  color: var(--txt_cta_light);
+}
+#tableTest .w40 {
+  width: 40%;
+}
+#tableTest tbody tr:nth-child(2n+2) {
+  background-color: #F1FBFF;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -4213,6 +4266,10 @@ RESPONSIVE DESIGN
   .content_aside_dv picture img:nth-child(2) {
     -webkit-mask-position: calc(50% + 200px);
             mask-position: calc(50% + 200px);
+  }
+
+  .cont_datatable {
+    overflow-x: scroll;
   }
 }
 @media screen and (max-width: 768px) {
