--- a/css/style.css
+++ b/css/style.css
@@ -4024,6 +4024,55 @@ button[type=submit] {
   background-color: #F1FBFF;
 }
 
+.buttons_test {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  justify-content: flex-end;
+  padding: 30px 0;
+  box-sizing: border-box;
+  border-top: 1px solid #C4C4C4;
+  border-bottom: 1px solid #C4C4C4;
+}
+
+.c_test_osid {
+  padding: 0 0 60px;
+  box-sizing: border-box;
+}
+.c_test_osid h4 {
+  color: var(--txt_cta_lightblue);
+}
+
+.cont_resultado_test {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 20px 0;
+  box-sizing: border-box;
+  gap: 40px;
+}
+.cont_resultado_test .result {
+  display: flex;
+  align-items: baseline;
+  gap: 10px;
+}
+.cont_resultado_test .result span {
+  color: var(--color_pri);
+}
+.cont_resultado_test .result .puntaje {
+  background-color: #F1FBFF;
+  border-radius: 6px;
+  padding: 6px;
+  box-sizing: border-box;
+  text-align: center;
+  min-width: 100px;
+}
+.cont_resultado_test .result .fas {
+  font-weight: 400;
+  font-size: 20px;
+  color: var(--active_link);
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -4797,6 +4846,15 @@ RESPONSIVE DESIGN
 
   .desc_section {
     margin: 30px auto 0px;
+  }
+
+  .cont_resultado_test {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .buttons_test {
+    justify-content: center;
   }
 }
 @media screen and (max-width: 480px) {
