--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4210,6 +4210,7 @@ summary{
         text-align: right;
         padding-bottom: 0;
         font-size: 16px;
+        align-items: flex-end;
     }
     .desc_card_nota{
         padding: 10px 20px;
@@ -4951,7 +4952,7 @@ RESPONSIVE DESIGN
     .c_nota_destacada a{
         max-height: 220px;
     }
-    .c_filtro::after, .tit_section_blog::after, .c_filtro::before{
+    .c_filtro::after, .tit_section_blog::after, .c_filtro::before, .tit_section_blog::before{
         display: none;
     }
 }
